force-app/main/default/objects/Return_Request__c/Return_Request__c.object-meta.xml
<CustomObject>
    <label>Return Request</label>
    <nameField>
        <label>Return Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Return_Request__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>