force-app/main/default/objects/Return_Request__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <label>Customer Email</label>
    <type>Email</type>
    <required>true</required>
</CustomField>