force-app/main/default/objects/Return_Request__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <label>Total Items</label>
    <type>RollUpSummary</type>
    <summaryForeignKey>Return_Item__c.Return_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
</CustomField>