force-app/main/default/objects/Return_Request__c/fields/Total_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund_Amount__c</fullName>
    <label>Total Refund Amount</label>
    <type>RollUpSummary</type>
    <summaryForeignKey>Return_Item__c.Return_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>